--- a/less/overrides.less
+++ b/less/overrides.less
@@ -153,6 +153,7 @@ input.form-control:focus {
     &:focus,
     &:hover {
         background: lighten(@highlight-color,10%);
+        color: @cta-color-text;
     }
 }
 .dropdown-menu li a {
